# name: test_all_null_values
  list([
    'Additional field is missing a title, display, matching or value: title=None, display=None, matching=None, val=None',
    'Additional field is missing a title, display, matching or value: title=link#maltego.link.label, display=Label, matching=, val=None',
    'Additional field is missing a title, display, matching or value: title=link#maltego.link.thickness, display=Thickness, matching=, val=None',
    'Additional field is missing a title, display, matching or value: title=link#maltego.link.color, display=LinkColor, matching=, val=None',
    'Additional field is missing a title, display, matching or value: title=link#maltego.link.style, display=LinkStyle, matching=, val=None',
    'Additional field is missing a title, display, matching or value: title=notes#, display=Notes, matching=, val=None',
    'Overlay is missing a property name, position or type: property_name=None, position=NW, overlay_type=colour',
    'UIMessage is missing a message type or content: message_type=None, message_content=None',
  ])
# ---
# name: test_entity_with_display_information
  '<MaltegoMessage><MaltegoTransformResponseMessage><Entities><Entity Type="maltego.Phrase"><Value>Hello Spencer!</Value><Weight>100</Weight><DisplayInformation><Label Name="Display Info Title" Type="text/html">&lt;p&gt;Display Info Content&lt;/p&gt;</Label></DisplayInformation></Entity></Entities><UIMessages></UIMessages></MaltegoTransformResponseMessage></MaltegoMessage>'
# ---
# name: test_entity_with_icon
  '<MaltegoMessage><MaltegoTransformResponseMessage><Entities><Entity Type="maltego.Phrase"><Value>Hello Spencer!</Value><Weight>100</Weight><IconURL>https://www.maltego.com/img/maltego-logo/maltego-horizontal.png</IconURL></Entity></Entities><UIMessages></UIMessages></MaltegoTransformResponseMessage></MaltegoMessage>'
# ---
# name: test_entity_with_overlays
  '<MaltegoMessage><MaltegoTransformResponseMessage><Entities><Entity Type="maltego.Phrase"><Value>Hello Spencer!</Value><Weight>100</Weight><Overlays><Overlay position="NW" propertyName="#45e06f" type="colour"></Overlay></Overlays></Entity></Entities><UIMessages></UIMessages></MaltegoTransformResponseMessage></MaltegoMessage>'
# ---
# name: test_entity_with_properties
  '<MaltegoMessage><MaltegoTransformResponseMessage><Entities><Entity Type="maltego.Phrase"><Value>Hello Spencer!</Value><Weight>100</Weight><AdditionalFields><Field DisplayName="displayNameTest" MatchingRule="loose" Name="fieldNameTest">valueTest</Field><Field DisplayName="displayNameTest2" MatchingRule="strict" Name="fieldNameTest2">valueTest2</Field></AdditionalFields></Entity></Entities><UIMessages></UIMessages></MaltegoTransformResponseMessage></MaltegoMessage>'
# ---
# name: test_entity_with_value
  '<MaltegoMessage><MaltegoTransformResponseMessage><Entities><Entity Type="maltego.Phrase"><Value>Hello Spencer!</Value><Weight>100</Weight></Entity></Entities><UIMessages></UIMessages></MaltegoTransformResponseMessage></MaltegoMessage>'
# ---
# name: test_exception_message
  '<MaltegoMessage><MaltegoTransformResponseMessage><Entities></Entities><UIMessages><UIMessage MessageType="PartialError">Test Exception</UIMessage></UIMessages></MaltegoTransformResponseMessage></MaltegoMessage>'
# ---
# name: test_response_with_exception
  '<MaltegoMessage><MaltegoTransformExceptionMessage><Exceptions><Exception>Test Exception</Exception></Exceptions></MaltegoTransformExceptionMessage></MaltegoMessage>'
# ---
# name: test_response_with_ui_message
  '<MaltegoMessage><MaltegoTransformResponseMessage><Entities></Entities><UIMessages><UIMessage MessageType="inform">Test Message</UIMessage></UIMessages></MaltegoTransformResponseMessage></MaltegoMessage>'
# ---
